// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentConfirmIllustration renders with borders 1`] = `
<div>
  <div
    class="payment-confirm-illustration__wrapper"
  >
    <div
      class="payment-confirm-illustration__illustrations"
    >
      <svg
        class="gridicon gridicons-help payment-confirm-illustration__payment-question-mark-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 16h-2v-2h2v2zm0-4.141V15h-2v-2a1 1 0 011-1c1.103 0 2-.897 2-2s-.897-2-2-2-2 .897-2 2H8a4 4 0 018 0 3.991 3.991 0 01-3 3.859z"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`PaymentConfirmIllustration renders with icon 1`] = `
<div>
  <div
    class="payment-confirm-illustration__wrapper"
  >
    <div
      class="payment-confirm-illustration__illustrations"
    >
      <img
        alt=""
        class="payment-confirm-illustration__payment-icon"
        src="assets/images/cards/woo-card.svg"
      />
      <svg
        class="gridicon gridicons-help payment-confirm-illustration__payment-question-mark-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 16h-2v-2h2v2zm0-4.141V15h-2v-2a1 1 0 011-1c1.103 0 2-.897 2-2s-.897-2-2-2-2 .897-2 2H8a4 4 0 018 0 3.991 3.991 0 01-3 3.859z"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`PaymentConfirmIllustration renders without props 1`] = `
<div>
  <div
    class="payment-confirm-illustration__wrapper"
  >
    <div
      class="payment-confirm-illustration__illustrations"
    >
      <svg
        class="gridicon gridicons-help payment-confirm-illustration__payment-question-mark-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 16h-2v-2h2v2zm0-4.141V15h-2v-2a1 1 0 011-1c1.103 0 2-.897 2-2s-.897-2-2-2-2 .897-2 2H8a4 4 0 018 0 3.991 3.991 0 01-3 3.859z"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;
